--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot[job-queue]==20.7
+python-telegram-bot[job-queue,webhooks]==20.7
 pandas==2.2.2
 openpyxl==3.1.2
 requests==2.31.0
